--- a/versions-v1/Cargo.toml
+++ b/versions-v1/Cargo.toml
@@ -8,3 +8,6 @@ edition = "2021"
 [dependencies]
 serde = { version = "1.0.174", features = ["derive"] }
 serde_json = "1.0.103"
+
+uuid = { version = "1.4.1", features = ["v4"] }
+rand = "0.8"
